style.css
body {
  font-family: Arial, sans-serif;
  background-color: #f4f4f4;
  text-align: center;
  margin: 0;
  padding: 0;
}

header {
  background-color: #f1f1e9;
  color: black;
  padding: 20px;
  text-align: center;
}

header h1 {
  font-size: 32px;
  margin: 10px 0;
}

header h2 {
  font-size: 24px;
  margin: 10px 0;
}

header p {
  font-size: 16px;
  margin: 10px;
}

header img{
  max-width: 100%;
  height: auto;
  margin: 15px;
  border-radius: 8px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 2.);
}

nav ul{
  list-style:none;
  display: flex;
  padding: 0;
  justify-content: center;
  margin: 0;
}

.city {
  cursor: pointer;
}

nav ul li {
  margin: 0 15px;
}
.mask {
  -webkit-mask-image: linear-gradient(black, transparent);
  mask-image: linear-gradient(black, transparent);
}
.container {
  margin-top: 50px;
}

#cityInput {
  padding: 10px;
  width: 300px;
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 4px;
  margin-bottom: 20px;
}

#searchBtn {
  padding: 10px 20px;
  font-size: 16px;
  cursor: pointer;
  background-color: #6a00ff;
  color: white;
  border: none;
  border-radius: 4px;
  transition: background-color 0.3s ease;
}

#cityInfo {
  margin-top: 20px;
  font-size: 18px;
  font-weight: bold;
  color: #2c3e50;
}

.city-details {
  background-color: #fff;
  padding: 20px;
  margin: 10px auto;
  width: 50%;
  border-radius: 5px;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

h2{
  text-align: center;
  margin-bottom: 20px;
  font-size: 28px;
  text-decoration: underline;
}

footer {
  background-color: #333;
  color: black;
  padding: 20px;
  text-align: center;
  position: relative;
  bottom: 0;
  width: 100%;
  background-color: #ccc;

}
footer ul li {
  margin: 0 15px;
  list-style: none;
}
footer p {
  margin: 0;
  font-size: 14px;
}
footer a {
  color: black;
  text-decoration: none;
}
@media screen and (max-width: 768px)  {
  .city-details {
    width: 80%;
  }
}
@media screen and (max-width: 600px) {
  #cityInput {
    background-color:#ebee94;
    color: rgb(255, 255, 255);
  }

  footer {
    background-color: #333;
    color: white;
    padding: 20px;
    text-align: center;

  }
footer a {
  color: #007BFF;
  text-decoration: none;
}


footer p {
  margin: 5px 0;
  font-size: 14px;
}


}
@media screen and (max-width: 600px) {
  nav ul {
    flex-direction: column;}
  nav ul li {
    margin: 10px 0;
  }
}
.popular-cities li{

  width: 200px;
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.);
  overflow: hidden;
  transition: transform 0.35 ease;
}
.popular-cities img{
  width: 100%;
  height:150px;
  object-fit: cover;
  border-bottom: 8px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 1.);
}
.popular-cities{
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  gap: 20px ;
  margin: 20px auto;
  max-width: 1200px;
  text-align: center;

}
table {
  border-collapse: collapse;
  width: 100%;
}
th, td {
  border: 1px solid black;
  padding: 8px;
  text-align: left;
}
th {
  background-color: #f2f2f2;
}
.city-info-table{
  width: 100;
  border-collapse: collapse;
  margin: 20px auto;
  font-size: 16px;
  background-color: #f1f1e9;
}
.city-info-table thead{
  background-color:#007BFF;
  color: black;
}
.city-info-table th, .city-info-table td{
  border: 1px solid #ddd;
  padding: 12px;
}
.city-info-table th{
  text-align: center;
  font-weight: bold;
}
.city-info-table td {
  vertical-align: middle;
}

